Added Project Model, CRUD Action, and related Views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,12 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <header>
+    <h1>Ticketing</h1>
+    <ul>
+      <li><%= link_to 'Projects', projects_path %></li>
+    </ul>
+  </header>
   <body>
     <%= yield %>
   </body>
