Display: On each Project pages and all Tickets

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <h1>Ticketing</h1>
     <ul>
       <li><%= link_to 'Projects', projects_path %></li>
+      <li><%= link_to 'Tickets', tickets_path %></li>
     </ul>
   </header>
   <body>
