--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,10 +1,12 @@
 <table>
-  <tbody>
+  <thead>
     <tr>
       <th>Name</th>
       <th>Open Tickets</th>
       <th>Total Tickets</th>
     </tr>
+  </thead>
+  <tbody>
     <% @projects.each do |project| %>
     <tr>
       <td>
