--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -2,4 +2,5 @@
 <p><%= @project.description %></p>
 <%= link_to 'Edit', edit_project_path(@project) %>
 <%= link_to 'Delete', project_path(@project), method: :delete %>
-
+<h2>Tickets</h2>
+<%= render partial: 'tickets/ticket_list', locals: { tickets: @project.tickets } %>
