--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -11,5 +11,5 @@
     <dt><%= f.label :status %></dt>
     <dd><%= f.text_field :status %></dd>
   </dl>
-  <%= f.submit(@ticket.new_record? ? 'Create Ticket' : 'Update ticket' )%>
+  <%= f.submit 'Update ticket' %>
 <% end %>
