--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,1 +1,21 @@
-<%= render 'form' %>
+<h2>New Ticket</h2>
+<h3>Project</h3>
+<%= form_for @ticket do |f| %>
+  <dl>
+    <dt><%= f.label :project %></dt>
+    <dd><%= f.collection_select(:project_id, Project.all, :id, :name) %></dd>
+  </dl>
+  <dl>
+    <dt><%= f.label :name %></dt>
+    <dd><%= f.text_field :name %></dd>
+  </dl>
+  <dl>
+    <dt><%= f.label :body %></dt>
+    <dd><%= f.text_area :body, rows: 5 %></dd>
+  </dl>
+  <dl>
+    <dt><%= f.label :status %></dt>
+    <dd><%= f.text_field :status %></dd>
+  </dl>
+  <%= f.submit 'Create ticket' %>
+<% end %>
