--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <ul>
       <li><%= link_to 'Projects', projects_path %></li>
       <li><%= link_to 'Tickets', tickets_path %></li>
+      <li><%= link_to 'Tags', tags_path %></li>
     </ul>
   </header>
   <body>
