Updated Views to Allow Selecting Tags for Tickets

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -11,5 +11,9 @@
     <dt><%= f.label :status %></dt>
     <dd><%= f.text_field :status %></dd>
   </dl>
+  <dl>
+    <dt><%= f.label :tags %></dt>
+    <dd><%= f.collection_select(:tag_ids, Tag.all, :id, :name, {}, { multiple: true }) %></dd>
+  </dl>
   <%= f.submit 'Update ticket' %>
 <% end %>
