--- a/app/views/tickets/_ticket_list.html.erb
+++ b/app/views/tickets/_ticket_list.html.erb
@@ -13,7 +13,7 @@
         <td><%= link_to ticket.name, ticket_path(ticket) %></td>
         <td><%= nil %></td>
         <td><%= ticket.status %></td>
-        <td>Not Yet</td>
+        <td><%= ticket.tags.map { |tag| tag.name  }.join(', ') %></td>
         <td>
           <%= link_to 'Edit', edit_ticket_path(ticket) %>
           <%= link_to 'Destroy', ticket_path(ticket), method: :delete %>
