--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
       <li><%= link_to 'Tickets', tickets_path %></li>
       <li><%= link_to 'Tags', tags_path %></li>
     </ul>
+    <%= link_to 'Login', '/' %>
+    <%= link_to 'Register', '/register' %>
   </header>
   <body>
     <%= yield %>
