Added Flash Messages

--- a/app/assets/stylesheets/ticketingApp.css
+++ b/app/assets/stylesheets/ticketingApp.css
@@ -16,6 +16,14 @@ header li {
   display: inline-block;
 }
 
+.success {
+  color: #008000;
+}
+
+.error {
+  color: #FF0000;
+}
+
 dl {
   margin: 10px 0;
 }
