--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
       <li><%= link_to 'Logout', '/logout' %></li>
     </ul>
     <% end %>
+    <%= render 'layouts/messages' %>
   </header>
   <body>
     <%= yield %>
