--- a/app/views/tickets/_ticket_list.html.erb
+++ b/app/views/tickets/_ticket_list.html.erb
@@ -11,7 +11,7 @@
     <% tickets.each do |ticket| %>
       <tr>
         <td><%= link_to ticket.name, ticket_path(ticket) %></td>
-        <td><%= nil %></td>
+        <td><%= ticket.assignee.name %></td>
         <td><%= ticket.status %></td>
         <td><%= ticket.tags.map { |tag| tag.name  }.join(', ') %></td>
         <td>
