--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -13,9 +13,21 @@
   <tbody>
     <tr>
       <td><%= @ticket.status %></td>
-      <td>Not yet</td>
-      <td>Not yet</td>
+      <td><%= @ticket.creator.name %></td>
+      <td><%= @ticket.assignee.name %></td>
     </tr>
   </tbody>
 </table>
+<h2>Comments</h2>
+<ul>
+  <% @ticket.comments.each do |comment| %>
+    <li>
+      <p><%= comment.body %></p>
+      <p>posted by <%= comment.creator.name %> <%= comment.created_at %></p>
+      <%= link_to 'Edit', edit_ticket_comment_path(@ticket, comment) %>
+      <%= link_to 'Delete', ticket_comment_path(@ticket, comment), method: :delete %>
+    </li>
+  <% end %>
+</ul>
+<%= render 'comments/form', comment: @comment %>
 <%= link_to 'Back', tickets_path %>
