--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -5,6 +5,8 @@
     <%= select_tag :project, options_from_collection_for_select(Project.all, :id, :name, params[:project]), include_blank: "All Projects"  %> 
     with status 
     <%= select_tag(:status, raw("<option value=''>Any Sttus</option><option value='new'>New</option><option value='in_progress'>In progress</option><option value='fixed'>Fixed</option><option value='blocked'>Blocked</option>")) %>
+    <%= select_tag :tag,
+      options_from_collection_for_select(Tag.all, :id, :name, params[:tag]), include_blank: '' %>
   </p>
   <%= button_tag 'Update', name: nil %>
   <%= link_to 'Clear filters', tickets_path %>
