Alphabetized Tags on Index and in Listings of Select Boxes

--- a/app/views/tickets/_form.html.erb
+++ b/app/views/tickets/_form.html.erb
@@ -19,7 +19,7 @@
   </dl>
   <dl>
     <dt><%= f.label :tags %></dt>
-    <dd><%= f.collection_select(:tag_ids, Tag.all, :id, :name, {}, { multiple: true }) %></dd>
+    <dd><%= f.collection_select(:tag_ids, Tag.all.order(:name), :id, :name, {}, { multiple: true }) %></dd>
   </dl>
   <%= f.submit 'Update ticket' %>
 <% end %>
